# MuJoCo_Models

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  46.txt  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  SPEC.md  conftest.py  docker-compose.yml  fix_mypy.py  issue-41.txt  issues.json  issues.txt  mj_issues.json  model_pack.yaml  mypy2.txt  mypy_out.txt  mypy_output.txt  patch.diff  pyproject.toml  requirements-lock.txt  requirements.txt  update_comments.py
.gaai/core/: README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: Verify-Issue-Closure.yml  anti-phantom-merge.yml  ci-standard.yml  cve-monitoring.yml  local-only-runner-guard.yml  spec-check.yml
.jules/: bolt.md
assessments/: 2026-04-26-A-project-organization.md  2026-04-26-B-documentation.md  2026-04-26-C-testing-and-quality.md  2026-04-26-D-ci-cd.md  2026-04-26-E-code-style-and-linting.md  2026-04-26-F-dependency-management.md  2026-04-26-G-security.md  2026-04-26-H-architecture-and-design.md  2026-04-26-I-error-handling.md  2026-04-26-J-performance.md  2026-04-26-K-maintainability.md  2026-04-26-L-accessibility-and-usability.md  2026-04-26-M-monitoring-and-observability.md  2026-04-26-MuJoCo_Models-assessment.json  2026-04-26-N-compliance-and-standards.md  2026-04-26-O-agentic-usability.md  2026-04-26-comprehensive-assessment.json  2026-04-26-comprehensive-assessment.md  2026-05-07-A-project-organization.md  2026-05-07-B-documentation.md  2026-05-07-C-testing.md  2026-05-07-D-error-handling.md  2026-05-07-E-performance.md  2026-05-07-F-code-quality.md  2026-05-07-G-dependency-hygiene.md  2026-05-07-H-security.md  2026-05-07-I-configuration-management.md  2026-05-07-J-observability.md  2026-05-07-K-maintenance-debt.md  2026-05-07-L-ci-cd.md  2026-05-07-M-deployment.md  2026-05-07-N-legal-and-compliance.md  2026-05-07-O-agentic-usability.md  2026-05-07-comprehensive-assessment.json  2026-05-07-comprehensive-assessment.md  created_issues.json  evidence.json
docs/: api.rst  conf.py  index.rst
docs/adr/: README.md
docs/assessments/: 2026-04-26-a-o-assessment.json  2026-04-26-a-o-assessment.md  A-N_Assessment_2026-04-02.md  A-N_Assessment_2026-04-04.md  A-N_Assessment_2026-04-09.md  A-N_Assessment_2026-04-10.md  A-N_Assessment_2026-04-11.md  A-N_Assessment_2026-04-14.md  A-N_Assessment_2026-04-17.md  A-N_Assessment_2026-04-19.md  A-N_Assessment_2026-04-20.md  A-N_Assessment_2026-04-21.md  A-N_Assessment_2026-04-22.md  assessment_summary.json  initial_assessment.md
docs/security/: pip_audit_ignores.yml
examples/: generate_all_models.py
rust_core/: Cargo.toml
rust_core/src/: lib.rs
scripts/: check_commit_message.py  setup_dev.py
src/mujoco_models/: __init__.py  __main__.py  exceptions.py  logging_config.py  model_pack.py
src/mujoco_models/exercises/: __init__.py  base.py
src/mujoco_models/optimization/: __init__.py  exercise_objective_data.py  exercise_objective_data_aux.py  exercise_objective_data_functional.py  exercise_objectives.py  inverse_kinematics.py  polygon_geometry.py  trajectory_optimizer.py
src/mujoco_models/shared/: __init__.py  theme.py
tests/: test_model_pack.py
tests/integration/: test_all_exercises_build.py  test_mujoco_loading.py
tests/parity/: test_parity_compliance.py
tests/unit/: test_benchmarks.py  test_check_commit_message.py  test_cli.py  test_cli_helpers.py  test_exceptions.py  test_generate_all_models.py  test_pip_audit_ignores.py  test_registry.py
(+67 files in other folders)
