[project]
name = "mujoco-models"
version = "0.1.0"
description = "MuJoCo musculoskeletal models for classical barbell exercises"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mujoco", "biomechanics", "simulation", "barbell", "strength-training"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "numpy>=1.26.4,<3.0.0",
    "matplotlib>=3.7.0",
    "mujoco>=3.3.0,<4",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
    "pytest-timeout>=2.0.0",
    "pytest-xdist>=3.0.0",
    "PyYAML>=6.0.0",
    "ruff>=0.14.0",
    "mypy>=1.13.0",
    "hypothesis>=6.0.0",
    "pytest-benchmark>=4.0.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
]


[project.scripts]
mujoco-models = "mujoco_models.__main__:main"

[project.entry-points."biomech.model_pack"]
mujoco_models = "mujoco_models.model_pack"

[project.urls]
Homepage = "https://github.com/D-sorganization/MuJoCo_Models"
Repository = "https://github.com/D-sorganization/MuJoCo_Models"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["src/**/*", "model_pack.yaml"]

[tool.hatch.build.targets.wheel]
packages = ["src/mujoco_models"]

[tool.hatch.build.targets.wheel.force-include]
"model_pack.yaml" = "mujoco_models/model_pack.yaml"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", "F", "I", "UP", "B", "T201", "SIM",
    "C4", "PIE", "PLE", "FURB", "RSE", "LOG",
    "PERF", "RET", "C90",
]
ignore = [
    "RET504",
    "PERF203",
    "PERF401",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"scripts/**" = ["T201"]
"tests/**" = ["T201"]
"examples/**" = ["T201"]
"src/mujoco_models/__main__.py" = ["T201"]
# B027: intentional empty method in ABC (not abstract, subclass hook)
"src/mujoco_models/exercises/base.py" = ["B027"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers --strict-config --durations=20 -m \"not slow and not live_simulation and not e2e and not requires_network and not heavy\""
markers = [
    "unit: Pure logic, highly isolated, execution in < 100ms",
    "integration: Subsystem boundaries, DBs, I/O, heavy mocking",
    "e2e: Full system boot, real networks, user workflows",
    "slow: marks tests as slow",
    "live_simulation: marks tests as requiring live simulation environment",
    "requires_network: needs real outbound network",
    "heavy: resource-intensive tests",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/test_*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true
precision = 1
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "pass",
    "except ImportError",
    "if TYPE_CHECKING:",
]
